--- a/index.html
+++ b/index.html
@@ -22,6 +22,6 @@
             <div id="results"></div>
         </div>
     </main>
-    <script src="index.js"></script>
+    <script src="searcher.js"></script>
 </body>
 </html>
